<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.testemp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_playlist"
            app:destination="@id/nav_playlist" />
        <action
            android:id="@+id/action_nav_home_to_nav_favorites"
            app:destination="@id/nav_favorites" />
        <action
            android:id="@+id/action_nav_home_to_capatureMood"
            app:destination="@id/capatureMood" />
    </fragment>

    <fragment
        android:id="@+id/nav_playlist"
        android:name="com.example.testemp.ui.playlist.PlaylistFragment"
        android:label="@string/menu_playlist"
        tools:layout="@layout/fragment_playlist" >
        <action
            android:id="@+id/action_nav_playlist_to_nav_favorites"
            app:destination="@id/nav_favorites" />
        <action
            android:id="@+id/action_nav_playlist_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.testemp.ui.favorites.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" >
        <action
            android:id="@+id/action_nav_favorites_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_favorites_to_nav_playlist"
            app:destination="@id/nav_playlist" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.testemp.ui.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_loginFragment_to_signin"
            app:destination="@id/signin" />
    </fragment>
    <fragment
        android:id="@+id/signin"
        android:name="com.example.testemp.ui.signin.Signin"
        android:label="fragment_signin"
        tools:layout="@layout/fragment_signin" >
        <action
            android:id="@+id/action_signin_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/capatureMood"
        android:name="com.example.testemp.CapatureMood"
        android:label="fragment_capature_mood"
        tools:layout="@layout/fragment_capature_mood" />
    <fragment
        android:id="@+id/musicPlayer"
        android:name="com.example.testemp.MusicPlayer"
        android:label="fragment_music_player"
        tools:layout="@layout/fragment_music_player" />
</navigation>